diesel_compile_tests/tests/fail/check_message_for_to_many_columns.rs
use diesel::prelude::table;

table! {
    test_table(column_1) {
        column_1 -> Integer,
        column_2 -> Integer,
        column_3 -> Integer,
        column_4 -> Integer,
        column_5 -> Integer,
        column_6 -> Integer,
        column_7 -> Integer,
        column_8 -> Integer,
        column_9 -> Integer,
        column_10 -> Integer,
        column_12 -> Integer,
        column_13 -> Integer,
        column_14 -> Integer,
        column_15 -> Integer,
        column_16 -> Integer,
        column_17 -> Integer,
        column_18 -> Integer,
    }
}

fn main() {}
